feat(compose): refatorando o compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,10 @@
 services:
   postgres:
     image: 'postgres:latest'
+    container_name: postgres_gg
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=nefrotrack'
+      - 'POSTGRES_PASSWORD=nefrotrack'
+      - 'POSTGRES_USER=nefrotrack'
     ports:
-      - '5432'
+      - '5432:5432'
