fix(config): corrigir application.properties (GitHub OAuth e basename de mensagens)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.application.name=nefrotrack
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_ID}
 spring.security.oauth2.client.registration..github.client-secret=${GITHUB_SECRET}
 
-spring.security.oauth2.client.registration.github.scope=read:user,user:email
+spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.messages.basename=messagess
+
+spring.messages.encoding=UTF-8
